Fix layout issues and chat
Fix minWidth of 400px to allow better support on smaller devices. Fix
chat button not being shown when screen is less than 700px.

--- a/openvidu-call-react/src/components/VideoRoomComponent.css
+++ b/openvidu-call-react/src/components/VideoRoomComponent.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   z-index: 999999;
-  min-width: 400px !important;
+  min-width: 300px !important;
 }
 
 .toolbar{
@@ -28,7 +28,7 @@
 	height: 40px !important;
 	text-align: center;
 	margin: auto;
-    min-width: 400px;
+    min-width: 300px;
 }
 .navButton{
 	height: 40px !important;
@@ -53,7 +53,7 @@
   top: 40px;
   bottom: 0;
   height: inherit;
-  min-width: 400px !important;
+  min-width: 300px !important;
   width: inherit;
 }
 
